spectec/test/elab/neg/parse-hole-index-overflow.t
  $ ./main.exe parse-hole-index-overflow.spectec 2>&1
  error: hex literal out of range
    --> parse-hole-index-overflow.spectec:6:14
    |
  6 |   hint(input %99999999999999999999)
    |              ^^^^^^^^^^^^^^^^^^^^^
    = source: parse
  [1]
